--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Main title -->
-    <h1>Elissa Guggiari
+    <h1>Elissa Guggiari <br>
         Graphic Designer</h1>
         <p>Passionate about typography and the communicative potential of individual graphic characters.
             My Bachelor thesis focused on the synaesthetic analysis of the letters of the alphabet,
@@ -17,30 +17,33 @@
             I am punctual and flexible in my approach to work.</p>
 
             <!-- Connection info -->
-            <p>viale Umbria 15, 20135 Milano, Italia <br>
+            <p>viale Umbria 15 <br>
+                20135 Milano <br>
+                Italia <br>
                 +39 351 51 51 611 <br>
-                elissa.guggiari@gmail.com <br>
-                www.elissaguggiari.com</p>
+                <a href="mail:elissa.guggiari@gmail.com">
+                    elissa.guggiari@gmail.com <br></a>
+                    <a href="http://elissaguggiari.com/" target="_blank">www.elissaguggiari.com</a>
             <!-- Experience section -->
             <h2>Experience</h2>
             <p><b>Alvar Aalto Gesellschaft, Munich, 2021 - 2022</b> <br>
-                Developed the soft restyling of the semi-annual bulletin for the AAG association
-                Updated the general layout and diversified the DE/EN languages
-                Contributed to the rearrangement of the company’s brand identity <br>
+                Developed the soft restyling of the semi-annual bulletin for the AAG association <br>
+                Updated the general layout and diversified the DE/EN languages <br>
+                Contributed to the rearrangement of the company's brand identity <br> <br>
                 <b>Internship at Studio MadBall, Lugano, 04.2017</b> <br>
-                Updated the layout of the annual magazine SFG Stabio
-                Created a certificate of merit for the company La Fonte <br>
-            <b>Internship at Corte della Miniera, Urbino, 09.2016</b>
+                Updated the layout of the annual magazine SFG Stabio <br>
+                Created a certificate of merit for the company La Fonte <br> <br>
+            <b>Internship at Corte della Miniera, Urbino, 09.2016</b> <br>
                 Technical experiments for lithographic engravings</p>
 
                 <!-- Education section -->
                 <h2>Education</h2>
                 <p><b>SPD, Scuola Politecnica di Design, Milan, Italy, 10.2022 - 12.2023</b> <br>
-                    One-year course in Graphic Design (double major in Visual Design and Web design)
+                    One-year course in Graphic Design (double major in Visual Design and Web design) <br> <br>
                     <b>NABA, Nuova Accademia di Belle Arti, Milan, Italy, 09.2018 - 12.2021</b> <br>
                     Diploma “A synesthetic alphabet” (grade 110L)
-                    Three-year course in Graphic Design and Art Direction (minor in Visual Design)
-                    Award of the scholarship “Give space to your talent” (grade 30L) <br>
+                    Three-year course in Graphic Design and Art Direction (minor in Visual Design) <br>
+                    Award of the scholarship “Give space to your talent” (grade 30L) <br> <br>
                     <b>CSIA, Centro Scolastico per le Industrie Artistiche, Lugano, Switzerland, 09.2014 - 06.2018</b> <br>
                     High school with artistic baccalaureate and specialised baccalaureate in visual
                     arts (grade 5.6/6.0), address engraving and modelling</p>
@@ -53,18 +56,42 @@
 
                 <!-- Skills section -->
                 <h2>Skills</h2>
-                <p>Visual Design, Publishing, Photography, Typography, Illustration, Engraving, User Interfaces, autonomy, organisation, precision</p>
+                <ul>
+                    <li>Visual Design</li>
+                    <li>Typography</li>
+                    <li>Photography</li>
+                    <li>Publishing</li>
+                    <li>User Interfaces</li>
+                    <li>Illustrations</li>
+                    <li>Engraving</li> <br>
+                    <li>Authonomy</li>
+                    <li>Precision</li>
+                    <li>Organization</li>
+                </ul>
 
                 <!-- Softwares section -->
                 <h2>Softwares</h2>
-                <p>Adobe Creative Cloud, Affinity Suite, Blender, Cinema 3D, Figma, Invision, Pubcoder, Office 365</p>
+                <ul>
+                    <li>Adobe Creative Cloud</li>
+                    <li>Affinity Suite</li>
+                    <li>Blender</li>
+                    <li>Cinema 3D</li> <br>
+                    <li>Figma</li>
+                    <li>Invision</li>
+                    <li>Pubcoder</li>
+                    <li>Office 365</li> <br>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                </ul>
                 
                 <!-- Languages section -->
                 <h2>Languages</h2>
-                <p><b>Italian</b> Madrelingua <br>
-                    <b>English</b> Livello C1 <br>
-                    <b>French</b> Livello B1+ <br>
-                    <b>Deutsch</b> Livello B1+</p>
+                    <ul>
+                        <li>Italian - Mothertongue</li>
+                        <li>English - Level C1</li>
+                        <li>French - Level B1+</li>
+                        <li>Deutsch - Level B1+</li>
+                    </ul>
                                 
 </body>
 </html>
